--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^5.2.1",
     "puppeteer": "^24.32.0"
   }
