--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "pdfkit": "^0.17.2",
     "puppeteer": "^24.32.0"
   }
 }
