--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,7 @@
   "dependencies": {
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
-    "ejs": "^3.1.10",
     "express": "^5.2.1",
-    "pdfkit": "^0.17.2",
-    "puppeteer": "^24.32.0"
+    "pdfkit": "^0.17.2"
   }
 }
